tests/syntax/incorrect_syntax/many_replicates.stderr
error: prefix `aren` is unknown
 --> tests/syntax/incorrect_syntax/many_replicates.stderr:1:28
  |
1 | error: multiple REPLICATEs aren't allowed
  |                            ^^^^ unknown prefix
  |
  = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
  |
1 | error: multiple REPLICATEs aren 't allowed
  |                                +

error: expected one of `!` or `::`, found `:`
 --> tests/syntax/incorrect_syntax/many_replicates.stderr:1:6
  |
1 | error: multiple REPLICATEs aren't allowed
  |      ^ expected one of `!` or `::`
